--- a/assets/layout/css/style.css
+++ b/assets/layout/css/style.css
@@ -7547,7 +7547,7 @@ fieldset[disabled] .form-control {
     background-size: cover;
 
     width: 100%;
-    height: 135px; }
+    height: 138px; }
     .sidebar .user-info .image {
       margin-right: 12px;
       display: inline-block; }
@@ -7561,7 +7561,10 @@ fieldset[disabled] .form-control {
       cursor: default;
       display: block;
       position: relative;
-      top: 25px; }
+      top: 25px;
+          background: #3f51b5;
+    height: 24px;
+     }
       .sidebar .user-info .info-container .name {
         white-space: nowrap;
         -ms-text-overflow: ellipsis;
@@ -7570,7 +7573,9 @@ fieldset[disabled] .form-control {
         overflow: hidden;
         font-size: 14px;
         max-width: 200px;
-        color: #fff; }
+        color: black; 
+        font-weight: bold;
+      }
       .sidebar .user-info .info-container .email {
         white-space: nowrap;
         -ms-text-overflow: ellipsis;
